# local3Ddescriptorlearning

./: README.md
3dDescriptorLearning/: keypoints_faust256.kpi
3dDescriptorLearning/cpp_geometry_images_generation/: CMakeLists.txt  config.ini  readme.md
3dDescriptorLearning/cpp_geometry_images_generation/include/: GI.h  GPC.h  Ini.h  IniFile.h  Mesh_C.h  Vector3.h  libcompcur.h  nanoflann.hpp  utils.h
3dDescriptorLearning/cpp_geometry_images_generation/lib/: libcompcur.lib
3dDescriptorLearning/cpp_geometry_images_generation/src/: gigen.cpp
3dDescriptorLearning/matlab_tools/: OFF2HKS.m  compute_curvature.m  symmshlp_matrix.m
3dDescriptorLearning/python_tripletCNN/: classify_gi_by_pidx_and_split.py  descGen.py  tfr_gen.py  train_mincv_perloss.py  train_softmax256.py
